force-app/main/default/objects/KanbanColumn__c/KanbanColumn__c.object-meta.xml
<CustomObject>
    <label>Kanban Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>