force-app/main/default/objects/KanbanColumn__c/fields/Overlay__c.field-meta.xml
<CustomField>
    <fullName>Overlay__c</fullName>
    <label>Overlay</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>