force-app/main/default/objects/KanbanColumn__c/fields/StrictLimit__c.field-meta.xml
<CustomField>
    <fullName>StrictLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strict Limit</label>
    <type>Checkbox</type>
</CustomField>